--- a/GoShopping/Base.lproj/Main.storyboard
+++ b/GoShopping/Base.lproj/Main.storyboard
@@ -317,28 +317,28 @@
                                     <rect key="frame" x="20" y="16" width="280" height="68"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="clZ-iY-Y8y">
-                                            <rect key="frame" x="8" y="6.5" width="264" height="55.5"/>
+                                            <rect key="frame" x="12" y="6.5" width="256" height="55.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="wVZ-T1-Yk7">
-                                                    <rect key="frame" x="0.0" y="0.0" width="52" height="55.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="33" height="55.5"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6Ye-2a-yZY">
-                                                            <rect key="frame" x="10" y="0.5" width="32" height="31"/>
+                                                            <rect key="frame" x="0.5" y="0.5" width="32" height="31"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="32" id="SNx-nq-a15"/>
                                                                 <constraint firstAttribute="width" constant="32" id="Yq4-bH-v4C"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="History" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pOx-99-kYk">
-                                                            <rect key="frame" x="0.0" y="36" width="52" height="19.5"/>
+                                                            <rect key="frame" x="0.0" y="36" width="33" height="19.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                             <color key="textColor" name="FontColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xtR-SW-QC9">
-                                                    <rect key="frame" x="61.5" y="11.5" width="158" height="32"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xtR-SW-QC9">
+                                                    <rect key="frame" x="41" y="11.5" width="188" height="32"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-blueberry" translatesAutoresizingMaskIntoConstraints="NO" id="0Dq-7b-HTt">
                                                             <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
@@ -348,21 +348,21 @@
                                                             </constraints>
                                                         </imageView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-cheese" translatesAutoresizingMaskIntoConstraints="NO" id="fBq-HC-Hhi">
-                                                            <rect key="frame" x="42" y="0.0" width="32" height="32"/>
+                                                            <rect key="frame" x="52" y="0.0" width="32" height="32"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="32" id="0Ey-5y-vSM"/>
                                                                 <constraint firstAttribute="height" constant="32" id="G0N-l4-EZW"/>
                                                             </constraints>
                                                         </imageView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-avocado" translatesAutoresizingMaskIntoConstraints="NO" id="jG7-I2-uxj">
-                                                            <rect key="frame" x="84" y="0.0" width="32" height="32"/>
+                                                            <rect key="frame" x="104" y="0.0" width="32" height="32"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="32" id="d6H-GM-auZ"/>
                                                                 <constraint firstAttribute="width" constant="32" id="oPc-0j-uG2"/>
                                                             </constraints>
                                                         </imageView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-beer_can" translatesAutoresizingMaskIntoConstraints="NO" id="DDK-3P-Z1f">
-                                                            <rect key="frame" x="126" y="0.0" width="32" height="32"/>
+                                                            <rect key="frame" x="156" y="0.0" width="32" height="32"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="32" id="eQQ-Y8-93I"/>
                                                                 <constraint firstAttribute="width" constant="32" id="sdk-jK-heh"/>
@@ -371,9 +371,9 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hjm-wu-5Hv">
-                                                    <rect key="frame" x="245" y="19" width="19" height="17"/>
+                                                    <rect key="frame" x="237" y="19" width="19" height="17"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                                    <color key="textColor" name="BrandColor"/>
+                                                    <color key="textColor" name="buttonColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -383,8 +383,8 @@
                                     <constraints>
                                         <constraint firstItem="clZ-iY-Y8y" firstAttribute="centerX" secondItem="8Dk-IM-4JZ" secondAttribute="centerX" id="9Pc-SG-UBx"/>
                                         <constraint firstItem="clZ-iY-Y8y" firstAttribute="centerY" secondItem="8Dk-IM-4JZ" secondAttribute="centerY" id="Td2-vD-JJh"/>
-                                        <constraint firstAttribute="trailing" secondItem="clZ-iY-Y8y" secondAttribute="trailing" constant="8" id="jLU-ZP-W9b"/>
-                                        <constraint firstItem="clZ-iY-Y8y" firstAttribute="leading" secondItem="8Dk-IM-4JZ" secondAttribute="leading" constant="8" id="rkv-kJ-JBu"/>
+                                        <constraint firstAttribute="trailing" secondItem="clZ-iY-Y8y" secondAttribute="trailing" constant="12" id="jLU-ZP-W9b"/>
+                                        <constraint firstItem="clZ-iY-Y8y" firstAttribute="leading" secondItem="8Dk-IM-4JZ" secondAttribute="leading" constant="12" id="rkv-kJ-JBu"/>
                                     </constraints>
                                 </view>
                             </subviews>
@@ -596,6 +596,9 @@
         </namedColor>
         <namedColor name="HeroScreenColor">
             <color red="0.83899998664855957" green="0.035000000149011612" blue="0.43500000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="buttonColor">
+            <color red="0.72200000286102295" green="0.16500000655651093" blue="0.32199999690055847" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
